fixed scripts and breadcrumbs

--- a/tableofcontents.html
+++ b/tableofcontents.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="dist/css/reset.css" />
     <link rel="stylesheet" href="dist/css/style.css" />
     <script src="app/script/script.js" defer></script>
+    <script src="app/script/dropdownTOC.js" defer></script>
     <title>Document</title>
   </head>
   <body>
@@ -42,7 +43,7 @@
                     class="sideDropDots"
                   />
                 </li>
-                <li class="listItemsSide"><a href="">Newly created mission</a></li>
+                <li class="listItemsSide"><a href="missions.html">Newly created mission</a></li>
                 <li class="listItemsSide"><a href="">Caution</a></li>
                 <li class="listItemsSide"><a href="">Equipment</a></li>
                 <li class="listItemsSide"><a href="">Operator</a></li>
@@ -180,8 +181,8 @@
         </div>
         <hr class="purpleLine" />
         <div class="breadNsearch">
-          <a href="tableofcontents.html">Table of contents /</a>
-
+          <div><a class="breadNsearch__newM" href="tableofcontents.html">Table of contents /</a>
+          </div>
           <input type="text" placeholder="Search.." /><img
             src="images/icons/search.svg"
             class="whitelogo"
@@ -208,7 +209,7 @@
                 decoding="async"
               />
             </li>
-            <li class="listItems"><a href="">Newly created mission</a></li>
+            <li class="listItems"><a href="missions.html">Newly created mission</a></li>
             <li class="listItems"><a href="">Caution</li>
             <li class="listItems"><a href="">Equipment</a></li>
             <li class="listItems"><a href="">Operator</a></li>
