--- a/searchresults.html
+++ b/searchresults.html
@@ -115,7 +115,7 @@
                 <li>
                   <img
                     src="images/icons/dropdownicon.svg"
-                    alt="Dropdown dots"
+                    alt="Sidemenu dots"
                     loading="lazy"
                     decoding="async"
                     class="sideDropDots"
@@ -169,18 +169,15 @@
                 decoding="async"
               />
               Home</a
+            ><a href="index.html"
+              ><img
+                src="images/icons/logout.svg"
+                alt="Logout icon"
+                loading="lazy"
+                decoding="async"
+              />
+              Log out</a
             >
-            <div>
-              <a href="index.html"
-                ><img
-                  src="images/icons/logout.svg"
-                  alt="Logout icon"
-                  loading="lazy"
-                  decoding="async"
-                />
-                Log out</a
-              >
-            </div>
           </div>
         </div>
 
@@ -195,7 +192,7 @@
             decoding="async"
             onclick="openNav()"
           />
-          <h3>01 Missions</h3>
+          <h3>Search</h3>
           <a href="tableofcontents.html">
             <img
               src="images/white-quadsat.svg"
@@ -210,150 +207,148 @@
           <div class="breadNsearch__crumbs">
             <a class="breadNsearch__newM" href="tableofcontents.html"
               >Table of contents / </a
-            ><a href="missions.html"> <b>Newly created mission /</b></a>
+            ><a href="searchresults.html"> <b>Search /</b></a>
           </div>
           <div class="container">
             <div class="wrapper">
-              <div><input class="searcher" type="text" name="search" id="search" placeholder="Type to search" autocomplete="chrome-off">
-              <img
-            src="images/icons/search.svg"
-
-            alt="Search Icon"
-            loading="lazy"
-            decoding="async" onclick="document.location='searchresults.html'"
-          /></div>
+              <div>
+                <input
+                  class="searcher"
+                  type="text"
+                  name="search"
+                  id="search"
+                  placeholder="Type to search"
+                  autocomplete="chrome-off"
+                />
+                <img
+                  src="images/icons/search.svg"
+                  alt="Search Icon"
+                  loading="lazy"
+                  decoding="async"
+                  onclick="document.location='searchresults.html'"
+                />
+              </div>
               <div class="results">
-                <ul>
-                </ul>
+                <ul></ul>
               </div>
             </div>
           </div>
+        </div>
       </nav>
     </header>
     <main>
-      <div class="info-grid-container">
-        <div class="info-grid-container__griditem1">
-          <h4>Newly created mission</h4>
-          <br />
-          <div>
-            <p>
-              By double clicking on the name of the newly created mission on the
-              bar on the left, you will be presented with the three views that
-              you will interact with in order to perform the test.
-            </p>
-            <br />
-            <p>
-              The first view called the “calibration” allows you to change the
-              information regarding the referencing system (model, manufacturer,
-              configuration, frequency, position, orientation and radom).
-            </p>
-            <br />
-            <p>
-              It also allows you to adjust the antennas position and
-              orientation. Lastly, you are able to adjust the payload settings,
-              if any are connected.
-            </p>
-            <br />
-            <p>
-              The second view called the “scan” allows you to create the flights
-              of the drone that you will be using to test the antenna. Here, you
-              will also be doing the data gathering as well as the data
-              processing.
-            </p>
-            <br />
-            <p>
-              In the third and last view, called the “plot”, is where you will
-              be viewing the created data sets.
-            </p>
+      <div class="searchGrid">
+        <h4>You have searched for the word: <b>“Antenna”</b></h4>
+        <div class="searchGrid__box1">
+          <div class="searchGrid__headertext">
+            <div>
+              <h4><b>Missions, New mission</b></h4>
+
+              <p>
+                Page 1: “[…], perform a broad range of testing missions to suit
+                your needs, whether out in the field for operational
+                <b>antennas</b> or in the testing phase for new <b>antennas</b>.
+              </p>
+            </div>
+            <a class="searchGrid__pageBtn" href="missions.html" type="button">
+              PAGE 1
+              <img
+                src="images/icons/rightArrow.svg"
+                alt="Right Arrow"
+                loading="lazy"
+                decoding="async"
+              />
+            </a>
           </div>
         </div>
-        <div class="info-grid-container__griditem2">
-          <img
-            src="images/placeholder.png"
-            class="dropdownGrid__frontIllu"
-            alt="Sidemenu dots"
-            loading="lazy"
-            decoding="async"
-          />
-        </div>
-        <div class="info-grid-container__griditem3">
-          <img
-            src="images/placeholder.png"
-            class="dropdownGrid__frontIllu"
-            alt="Sidemenu dots"
-            loading="lazy"
-            decoding="async"
-          />
-        </div>
-      </div>
-      <div class="interactive-guide">
-        <div class="interactive-guide__griditem">
-          <h4>Guide</h4>
-          <div class="interactive-guide__content-flex">
-            <img
-              src="images/page1-crp.png"
-              class="dropdownGrid__frontIllu"
-              alt="Sidemenu dots"
-              loading="lazy"
-              decoding="async"
-              id="imgClickAndChange"
-            />
-            <p id="guideText">
-              <b> Start: </b> <br />
-              By double clicking on the name of the newly created mission on the
-              bar on the left, you will be presented with the three views that
-              you will interact with in order to perform the test.
-            </p>
-          </div>
-          <div id="progress" class="progress-bar"></div>
-          <div class="progressBtn">
-            <button
-              id="click"
-              onclick="setPrc(), resetImage();"
-              class="progressBtnreset"
+        <div class="searchGrid__box2">
+          <div class="searchGrid__headertext">
+            <div>
+              <h4><b>Gathering data, Data</b></h4>
+
+              <p>
+                Page 6: “[…] Initially serving the satellite communication
+                industry, today QuadSAT is looking at a number of different
+                industries related to <b>antenna</b> testing.”
+              </p>
+            </div>
+            <a
+              class="searchGrid__pageBtn"
+              href="tableofcontents.html"
+              type="button"
             >
-              RESET
-            </button>
-            <button class="click" onclick="setPrc('25'), changeImage();">
-              STEP 1
-            </button>
-            <button class="click" onclick="setPrc('50'), changeImage2();">
-              STEP 2
-            </button>
-            <button class="click" onclick="setPrc('75'), changeImage3();">
-              STEP 3
-            </button>
-            <button class="click" onclick="setPrc('99.9'), changeImage4();">
-              STEP 4
-            </button>
+              PAGE 7
+              <img
+                src="images/icons/rightArrow.svg"
+                alt="Right Arrow"
+                loading="lazy"
+                decoding="async"
+              />
+            </a>
+          </div>
+        </div>
+        <div class="searchGrid__box3">
+          <div class="searchGrid__headertext">
+            <div>
+              <h4><b>Connecting to drone, Installment</b></h4>
+
+              <p>
+                Page 7: “Most RFI arises from poorly performing or badly
+                installed <b>antennas</b> and can cause connection failures and
+                lowered bandwidth. Currently, <b>antennas</b> are tested in
+                conventional test ranges prior to network deployment in order
+                […]”
+              </p>
+            </div>
+            <a
+              class="searchGrid__pageBtn"
+              href="tableofcontents.html"
+              type="button"
+            >
+              PAGE 8
+              <img
+                src="images/icons/rightArrow.svg"
+                alt="Right Arrow"
+                loading="lazy"
+                decoding="async"
+              />
+            </a>
+          </div>
+        </div>
+        <div class="searchGrid__box4">
+          <div class="searchGrid__headertext">
+            <div>
+              <h4><b>Antenna measurements, Radiation patterns</b></h4>
+
+              <p>
+                Page 13: “QuadSAT’s unique solution enables a range of on-site
+                measurements such as <b>antenna</b> radiation patterns and
+                <b>antenna</b> alignment. The payload mounted on the drone
+                enables maximal location flexibility.”
+              </p>
+            </div>
+            <a
+              class="searchGrid__pageBtn"
+              href="tableofcontents.html"
+              type="button"
+            >
+              PAGE 13
+              <img
+                src="images/icons/rightArrow.svg"
+                alt="Right Arrow"
+                loading="lazy"
+                decoding="async"
+              />
+            </a>
           </div>
         </div>
       </div>
     </main>
     <footer>
-      <div class="footerBtns">
-        <a href="tableofcontents.html"
-          ><img
-            src="images/icons/leftArrow.svg"
-            alt="Left Arrow"
-            loading="lazy"
-            decoding="async"
-          />
-          <h4>PREVIOUS PAGE</h4></a
-        >
-        <a href="caution.html"
-          ><h4>NEXT PAGE</h4>
-          <img
-            src="images/icons/rightArrow.svg"
-            alt="Right Arrow"
-            loading="lazy"
-            decoding="async"
-        /></a>
-      </div>
       <hr class="purpleLine" />
       <div class="footerText">
         <p>Flight Assistant Manual</p>
-        <p>Page 2</p>
+        <p>Page 1</p>
       </div>
     </footer>
   </body>
