--- a/tableofcontents.html
+++ b/tableofcontents.html
@@ -14,7 +14,7 @@
       <!--Preloader-->
         <div class="splash">
           <div class="fade-in">
-            <img class="preloaderpic" src="images/placeholder.png" alt="illustration-preloader">
+            <img class="preloaderpic" src="images/drone.png" alt="illustration-preloader">
           </div>
         </div>
      <!--Preloader-->
