small fixes and changes

--- a/missions.html
+++ b/missions.html
@@ -269,8 +269,8 @@
         </div>
         <div class="info-grid-container__griditem2">
           <img
-            src="images/placeholder.png"
-            class="dropdownGrid__frontIllu"
+            src="images/Satellit.png"
+            class="illus"
             alt="Sidemenu dots"
             loading="lazy"
             decoding="async"
@@ -278,8 +278,8 @@
         </div>
         <div class="info-grid-container__griditem3">
           <img
-            src="images/placeholder.png"
-            class="dropdownGrid__frontIllu"
+            src="images/drone.png"
+            class="illus"
             alt="Sidemenu dots"
             loading="lazy"
             decoding="async"
