--- a/tableofcontents.html
+++ b/tableofcontents.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="dist/css/reset.css" />
     <link rel="stylesheet" href="dist/css/style.css" />
     <script src="app/script/script.js" defer></script>
-    <script src="app/script/dropdownTOC.js" defer></script>
+    <script src="app/script/dropdownTOC.js" defer></script><script src="app/script/splash.js" defer></script>
     <title>Document</title>
   </head>
   <body>
@@ -193,7 +193,7 @@
           </div>
           <div class="container">
             <div class="wrapper">
-              <div><input class="searcher" type="text" name="search" id="search" placeholder="Type to search" autocomplete="chrome-off">
+              <div><input class="searcher" type="text" name="search" id="search" placeholder="Type to search" autocomplete="off">
               <img
             src="images/icons/search.svg"
 
