--- a/styleguide/layout.html
+++ b/styleguide/layout.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/stylesheet.css" />
     <title>Styleguide</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com"> 
+    <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
   </head>
   <body>
@@ -28,23 +28,114 @@
     <h3>Layout</h3>
         <div class="sektion6">
          <div class="gridlayout">
-         <img src="assets/images/layout.png" class="gridpic" alt="gridpic" /></div>
+         <img src="assets/images/gridsFlex.JPG" class="gridpic" alt="gridpic" /></div>
          <div class="kode-overskrift">
     <h3 class="title2">Code</h3> </div>
         <div class="wrapper-box-layout">
           <button type="button" class="collapsible-layout">Open to see code</button>
           <div class="content-layout">
-    
-    
+
+
             <b>HTML:</b> <br>
-              &lt;img id="logoSideid" class="logoSide" src="assets/images/logo_pink.png" alt="Filter ikon"/&gt;
-              <br>
-              <br>
-              <b>CSS:</b> <br>
-              .logoSide { <br>
-              width: 85px; <br>
-              margin: 50px 0 -130px 70px; <br>
-            }
+            &lt;div class="breadNsearch"&gt;
+            &lt;div class="breadNsearch__crumbs"&gt;
+              &lt;a class="breadNsearch__newM" href="tableofcontents.html"
+                &gt;Table of contents / &lt;/a
+              &gt;&lt;a href="missions.html"&gt; &lt;b&gt;Newly created mission /&lt;/b&gt;&lt;/a&gt;
+            &lt;/div&gt;
+            &lt;div class="container"&gt;
+              &lt;div class="wrapper"&gt;
+                &lt;div&gt;&lt;input class="searcher" type="text" name="search" id="search" placeholder="Type to search" autocomplete="chrome-off"&gt;
+                &lt;img
+              src="images/icons/search.svg"
+
+              alt="Search Icon"
+              loading="lazy"
+              decoding="async" onclick="document.location='searchresults.html'"
+            /&gt;&lt;/div&gt;
+                &lt;div class="results"&gt;
+                  &lt;ul&gt;
+                  &lt;/ul&gt;
+                &lt;/div&gt;
+              &lt;/div&gt;
+            &lt;/div&gt;
+<br> <br>
+.breadNsearch {
+  display: -ms-grid;
+  display: grid;
+  margin-top: 10px;
+  -ms-grid-columns: 50% 20% 30%;
+      grid-template-columns: 50% 20% 30%;
+  -ms-grid-rows: 100%;
+      grid-template-rows: 100%;
+}
+
+.breadNsearch input {
+  -ms-grid-column: 3;
+  -ms-grid-column-span: 1;
+  grid-column: 3/4;
+  padding: 12px;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
+  grid-row: 1/2;
+  color: #e3e3e3;
+  outline: none;
+  background-color: #2f2f2f;
+}
+
+.breadNsearch input:focus {
+  -webkit-transition: 0.5;
+  transition: 0.5;
+}
+
+.breadNsearch__searchDivFlex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: stretch;
+      -ms-flex-pack: stretch;
+          justify-content: stretch;
+  margin-top: 15px;
+}
+
+.breadNsearch a {
+  margin-left: 1%;
+}
+
+.breadNsearch__newM {
+  display: block;
+  margin-left: 12% !important;
+}
+
+.breadNsearch a:hover {
+  color: #bb86fc;
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+}
+
+.breadNsearch img {
+  -ms-grid-column: 3;
+  -ms-grid-column-span: 1;
+  grid-column: 3/4;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
+  grid-row: 1/2;
+  -ms-grid-column-align: end;
+      justify-self: end;
+  margin: 3% 18%;
+  width: 20px;
+  height: 20px;
+}
+
+.breadNsearch__crumbs {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+}
+
           </div>
        </div>
         </div>
