ikoner er sat ind

--- a/styleguide/ikoner.html
+++ b/styleguide/ikoner.html
@@ -33,31 +33,31 @@
         <th class="menu">Importance</th>
       </tr>
       <tr>
-        <td><img src="icons1/email.png" alt="emailikon" /></td>
+        <td><img src="assets/images/home.svg" alt="emailikon" /></td>
         <td>Bruges når man logger ind med e-mail</td>
       </tr>
       <tr>
-        <td><img src="icons1/phone.png" alt="tele" /></td>
+        <td><img src="assets/images/logout.svg" alt="tele" /></td>
         <td>Bruges når man logger ind med telefonnummer</td>
       </tr>
       <tr>
-        <td><img src="icons1/arrowbackpink1.png" alt="arrow2" /></td>
+        <td><img src="assets/images/search.svg" alt="arrow2" /></td>
         <td>Bruges når man vil tilbage til siden før</td>
       </tr>
       <tr>
-        <td><img src="icons1/arrowbackblack1.png" alt="arrow1" /></td>
+        <td><img src="assets/images/leftArrow.svg" alt="arrow1" /></td>
         <td>Bruges når man vil tilbage til siden før</td>
       </tr>
       <tr>
-        <td><img src="icons1/menu.png" alt="hammenu" /></td>
+        <td><img src="assets/images/rightArrow.svg" alt="hammenu" /></td>
         <td>Burgermenu/sidemenu</td>
       </tr>
       <tr>
-        <td><img src="icons1/search.png" alt="lup" /></td>
+        <td><img src="assets/images/sidemenu.svg" alt="lup" /></td>
         <td>Bruges til søgninger</td>
       </tr>
       <tr>
-        <td><img src="icons1/filter.png" alt="filtrer" /></td>
+        <td><img src="assets/images/dropdownicon.svg" alt="filtrer" /></td>
         <td>Bruges til at filtrere mellem kategorier</td>
       </tr>
     </table>
