--- a/styleguide/knapper.html
+++ b/styleguide/knapper.html
@@ -404,13 +404,20 @@
             Denne knap bliver anvendt på profil-siden til at skifte sin kode. 
           </p>
           </div>
-          <div class="farveboks11"></div>
-          <div class="kodeboksen11">
-          <br>
-          <br>
-          <b>HTML:</b> <br>
-              <b>CSS:</b> <br>
-        </div>
+          <div class="wrapper-box-button11">
+            <button type="button" class="collapsible-button11">Open to see code</button>
+            <div class="content-button11 invisible">
+              <b>HTML:</b> <br>
+                &lt;img id="logoSideid" class="logoSide" src="assets/images/logo_pink.png" alt="Filter ikon"/&gt;
+                <br>
+                <br>
+                <b>CSS:</b> <br>
+                .logoSide { <br>
+                width: 85px; <br>
+                margin: 50px 0 -130px 70px; <br>
+              }
+            </div>
+            </div>
 
           <div class="btnsGridItem12">
           <br>
@@ -432,13 +439,22 @@
             Denne knap bliver anvendt på profil-siden til at gemme sine ændringer. 
           </p>
           </div>
-          <div class="farveboks12"></div>
-          <div class="kodeboksen12">
-          <br>
-          <br>
-          <b>HTML:</b> <br>
-              <b>CSS:</b> <br>
+         
+          <div class="wrapper-box-button12">
+            <button type="button" class="collapsible-button12">Open to see code</button>
+            <div class="content-button12 invisible">
+              <b>HTML:</b> <br>
+                &lt;img id="logoSideid" class="logoSide" src="assets/images/logo_pink.png" alt="Filter ikon"/&gt;
+                <br>
+                <br>
+                <b>CSS:</b> <br>
+                .logoSide { <br>
+                width: 85px; <br>
+                margin: 50px 0 -130px 70px; <br>
+              }
             </div>
+            </div>
+
 
           <div class="btnsGridItem13">
           <br>
@@ -457,15 +473,20 @@
             Denne knap bliver brugt på profil-siden til at slå funktioner som f.eks. påmindelser til og fra. 
           </p>
           </div>
-          <div class="farveboks13"></div>
-          <div class="kodeboksen13">
-          <br>
-          <br>
-          <b>HTML:</b> <br>
-          <b>CSS:</b> <br>
-          <b>JS:</b> <br>
-          </div>
-        </div>
+          <div class="wrapper-box-button13">
+            <button type="button" class="collapsible-button13">Open to see code</button>
+            <div class="content-button13 invisible">
+              <b>HTML:</b> <br>
+                &lt;img id="logoSideid" class="logoSide" src="assets/images/logo_pink.png" alt="Filter ikon"/&gt;
+                <br>
+                <br>
+                <b>CSS:</b> <br>
+                .logoSide { <br>
+                width: 85px; <br>
+                margin: 50px 0 -130px 70px; <br>
+              }
+            </div>
+            </div>
     </section>
     <script src="script/script1.js" defer></script>
   </body>
