--- a/styleguide/ikoner.html
+++ b/styleguide/ikoner.html
@@ -68,14 +68,33 @@
 
 
         <b>HTML:</b> <br>
-          &lt;img id="logoSideid" class="logoSide" src="assets/images/logo_pink.png" alt="Filter ikon"/&gt;
+        &lt;div class="homewrapperbtn"&gt;
+        &lt;a&gt; href="tableofcontents.html" type="button" class="homebtn"&gt;
+          HOME
+        &lt;/a&gt;
+      &lt;/div&gt;
           <br>
           <br>
           <b>CSS:</b> <br>
-          .logoSide { <br>
-          width: 85px; <br>
-          margin: 50px 0 -130px 70px; <br>
-        }
+          .homebtn { <br>
+            display: inline-block; <br>
+            background-color: $clr-light-purple; <br>
+            border: 2px solid $clr-light-purple; <br>
+            border-radius: 4px; <br>
+            color: black; <br>
+            padding: 15px 32px; <br>
+            margin-top: 50px; <br>
+            text-decoration: none; <br>
+            font-size: 18px; <br>
+            font-weight: 600; <br>
+            margin-bottom: 40px; <br>
+          } <br>
+          <br>
+    .homebtn:hover { <br>
+            background-color: $clr-sheet-black; <br>
+            color: $clr-text; <br>
+          } <br>
+          <br>
       </div>
    </div>
     </div>
