--- a/styleguide/logo.html
+++ b/styleguide/logo.html
@@ -38,14 +38,22 @@
 
 
           <b>HTML:</b> <br>
-            &lt;img id="logoSideid" class="logoSide" src="assets/images/logo_pink.png" alt="Filter ikon"/&gt;
+          &lt;a&gt; href=""&gt;
+    &lt;img
+      src="images/white-quadsat.svg"
+      class="whitelogo"
+      alt="QuadSATs logo"
+      loading="lazy"
+      decoding="async"
+  /&gt;&lt;/a&gt;
             <br>
             <br>
             <b>CSS:</b> <br>
-            .logoSide { <br>
-            width: 85px; <br>
-            margin: 50px 0 -130px 70px; <br>
-          }
+            .whitelogo { <br>
+              height: 70px; <br>
+              cursor: pointer; <br>
+            } <br>
+          } <br>
         </div>
      </div>
       </div>
