--- a/styleguide/typografi.html
+++ b/styleguide/typografi.html
@@ -111,15 +111,27 @@
   <div class="wrapper-box-typografi">
    <button type="button-typografi" class="collapsible-typografi">Open to see code</button>
    <div class="content-typografi">
-     <b>HTML:</b> <br>
-       &lt;img id="logoSideid" class="logoSide" src="assets/images/logo_pink.png" alt="Filter ikon"/&gt;
+      <b>HTML:</b> <br>
+      &lt;h4&gt;
+      <br>
+      &lt;b&gt;01&lt;/b&gt; 
+      <br>
+      &lt;span&gt;Missions&lt;/span&gt;
+      <br>
+      &lt;/h4&gt; 
        <br>
        <br>
        <b>CSS:</b> <br>
-       .logoSide { <br>
-       width: 85px; <br>
-       margin: 50px 0 -130px 70px; <br>
-     }
+       .anchor span { <br>
+         border-bottom: 4px solid $clr-text; <br>
+       } <br>
+       <br>
+       .anchor span:hover { <br>
+         color: $clr-light-purple; <br>
+         border-bottom: 4px solid $clr-light-purple; <br>
+         transition: 0.2s; <br>
+       } <br>
+       <br>
    </div>
    </div>
   </section>
