--- a/styleguide/layout.html
+++ b/styleguide/layout.html
@@ -35,107 +35,241 @@
           <button type="button" class="collapsible-layout">Open to see code</button>
           <div class="content-layout">
 
-
             <b>HTML:</b> <br>
-            &lt;div class="breadNsearch"&gt;
-            &lt;div class="breadNsearch__crumbs"&gt;
-              &lt;a class="breadNsearch__newM" href="tableofcontents.html"
-                &gt;Table of contents / &lt;/a
-              &gt;&lt;a href="missions.html"&gt; &lt;b&gt;Newly created mission /&lt;/b&gt;&lt;/a&gt;
-            &lt;/div&gt;
-            &lt;div class="container"&gt;
-              &lt;div class="wrapper"&gt;
-                &lt;div&gt;&lt;input class="searcher" type="text" name="search" id="search" placeholder="Type to search" autocomplete="chrome-off"&gt;
-                &lt;img
-              src="images/icons/search.svg"
+            &lt;div class="topnavContainer"&gt; <br>
+    &lt;img
+      src="images/icons/sidemenu.svg"
+      class="sidemenu"
+      alt="Sidemenu dots"
+      loading="lazy"
+      decoding="async"
+      onclick="openNav()"
+    /&gt; <br>
+    &lt;h3&gt;01 Missions&lt;/h3&gt; <br>
+    &lt;a href="tableofcontents.html"&gt; <br>
+      &lt;img
+        src="images/white-quadsat.svg"
+        class="whitelogo"
+        alt="QuadSATs logo"
+        loading="lazy"
+        decoding="async"
+    /&gt;&lt;/a&gt; <br>
+  &lt;/div&gt; <br>
+  &lt;hr class="purpleLine" /&gt; <br>
+  &lt;div class="breadNsearch"&gt; <br>
+    &lt;div class="breadNsearch__crumbs"&gt; <br>
+      &lt;a class="breadNsearch__newM" href="tableofcontents.html"
+        &gt;Table of contents / &lt;/a
+      &gt;&lt;a href="missions.html"&gt; &lt;b&gt;Newly created mission /&lt;/b&gt;&lt;/a&gt;
+    &lt;/div&gt; <br>
+    &lt;div class="container"&gt; <br>
+      &lt;div class="wrapper"&gt; <br>
+        &lt;div&gt;&lt;input class="searcher" type="text" name="search" id="search" placeholder="Type to search" autocomplete="chrome-off"&gt; <br>
+        &lt;img
+      src="images/icons/search.svg"
 
-              alt="Search Icon"
-              loading="lazy"
-              decoding="async" onclick="document.location='searchresults.html'"
-            /&gt;&lt;/div&gt;
-                &lt;div class="results"&gt;
-                  &lt;ul&gt;
-                  &lt;/ul&gt;
-                &lt;/div&gt;
-              &lt;/div&gt;
-            &lt;/div&gt;
-<br> <br>
-.breadNsearch {
-  display: -ms-grid;
-  display: grid;
-  margin-top: 10px;
-  -ms-grid-columns: 50% 20% 30%;
-      grid-template-columns: 50% 20% 30%;
-  -ms-grid-rows: 100%;
-      grid-template-rows: 100%;
-}
+      alt="Search Icon"
+      loading="lazy"
+      decoding="async" onclick="document.location='searchresults.html'"
+    /&gt;&lt;/div&gt; <br>
+        &lt;div class="results"&gt; <br>
+          &lt;ul&gt; <br>
+          &lt;/ul&gt;<br>
+        &lt;/div&gt;<br>
+      &lt;/div&gt;<br>
+    &lt;/div&gt;<br>
+&lt;/nav&gt;<br>
+&lt;/header&gt;<br>
+&lt;main&gt;<br>
+&lt;div class="info-grid-container"&gt; <br>
+  &lt;div class="info-grid-container__griditem1"&gt; <br>
+    &lt;h4&gt;Newly created mission&lt;/h4&gt; <br>
+    &lt;br /&gt; <br>
+    &lt;div&gt; <br>
+      &lt;p&gt; <br>
+        By double clicking on the name of the newly created mission on the
+        bar on the left, you will be presented with the three views that
+        you will interact with in order to perform the test.
+      &lt;/p&gt; <br>
+      &lt;br /&gt; <br>
+      &lt;p&gt; <br>
+        The first view called the “calibration” allows you to change the
+        information regarding the referencing system (model, manufacturer,
+        configuration, frequency, position, orientation and radom).
+      &lt;/p&gt; <br>
+      &lt;br /&gt; <br>
+      &lt;p&gt; <br>
+        It also allows you to adjust the antennas position and
+        orientation. Lastly, you are able to adjust the payload settings,
+        if any are connected.
+      &lt;/p&gt; <br>
+      &lt;br /&gt; <br>
+      &lt;p&gt; <br>
+        The second view called the “scan” allows you to create the flights
+        of the drone that you will be using to test the antenna. Here, you
+        will also be doing the data gathering as well as the data
+        processing.
+      &lt;/p&gt; <br>
+      &lt;br /&gt; <br>
+      &lt;p&gt; <br>
+        In the third and last view, called the “plot”, is where you will
+        be viewing the created data sets.
+      &lt;/p&gt; <br>
+    &lt;/div&gt; <br>
+  &lt;/div&gt; <br>
+  &lt;div class="info-grid-container__griditem2"&gt; <br>
+    &lt;img
+      src="images/Satellit.png"
+      class="illus"
+      alt="Sidemenu dots"
+      loading="lazy"
+      decoding="async"
+    /&gt; <br>
+  &lt;/div&gt; <br>
 
-.breadNsearch input {
-  -ms-grid-column: 3;
-  -ms-grid-column-span: 1;
-  grid-column: 3/4;
-  padding: 12px;
-  -ms-grid-row: 1;
-  -ms-grid-row-span: 1;
-  grid-row: 1/2;
-  color: #e3e3e3;
-  outline: none;
-  background-color: #2f2f2f;
-}
+&lt;/div&gt; <br>
+<br> 
 
-.breadNsearch input:focus {
-  -webkit-transition: 0.5;
-  transition: 0.5;
-}
+<b>CSS:</b> <br>
+.breadNsearch { <br>
+  display: -ms-grid; <br>
+  display: grid; <br>
+  margin-top: 10px; <br>
+  -ms-grid-columns: 50% 20% 30%; <br>
+  grid-template-columns: 50% 20% 30%; <br>
+  -ms-grid-rows: 100%; <br>
+  grid-template-rows: 100%; <br>
+} <br>
+<br>
+.breadNsearch input { <br>
+  -ms-grid-column: 3; <br>
+  -ms-grid-column-span: 1; <br>
+  grid-column: 3/4; <br>
+  padding: 12px; <br>
+  -ms-grid-row: 1; <br>
+  -ms-grid-row-span: 1; <br>
+  grid-row: 1/2; <br>
+  color: #e3e3e3;<br>
+  outline: none; <br>
+  background-color: #2f2f2f; <br>
+} <br>
+<br>
+.breadNsearch input:focus { <br>
+  -webkit-transition: 0.5; <br>
+  transition: 0.5; <br>
+} <br>
 
-.breadNsearch__searchDivFlex {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: stretch;
-      -ms-flex-pack: stretch;
-          justify-content: stretch;
-  margin-top: 15px;
-}
-
-.breadNsearch a {
-  margin-left: 1%;
-}
-
-.breadNsearch__newM {
-  display: block;
-  margin-left: 12% !important;
-}
-
-.breadNsearch a:hover {
-  color: #bb86fc;
-  -webkit-transition: 0.2s;
-  transition: 0.2s;
-}
-
-.breadNsearch img {
-  -ms-grid-column: 3;
-  -ms-grid-column-span: 1;
-  grid-column: 3/4;
-  -ms-grid-row: 1;
-  -ms-grid-row-span: 1;
-  grid-row: 1/2;
-  -ms-grid-column-align: end;
-      justify-self: end;
-  margin: 3% 18%;
-  width: 20px;
-  height: 20px;
-}
-
-.breadNsearch__crumbs {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
-}
-
+.breadNsearchsearchDivFlex { <br>
+  display: -webkit-box; <br>
+  display: -ms-flexbox; <br>
+  display: flex; <br>
+  -webkit-box-pack: stretch; <br>
+  -ms-flex-pack: stretch; <br>
+  justify-content: stretch; <br>
+  margin-top: 15px; <br>
+} <br>
+<br>
+.breadNsearch a { <br>
+  margin-left: 1%; <br>
+} <br>
+<br>
+.breadNsearchnewM {<br>
+  display: block; <br>
+  margin-left: 12% !important; <br>
+} <br>
+<br>
+.breadNsearch a:hover { <br>
+  color: #bb86fc;<br>
+  -webkit-transition: 0.2s; <br>
+  transition: 0.2s; <br>
+} <br>
+<br>
+.breadNsearch img { <br>
+  -ms-grid-column: 3; <br>
+  -ms-grid-column-span: 1; <br>
+  grid-column: 3/4; <br>
+  -ms-grid-row: 1; <br>
+  -ms-grid-row-span: 1; <br>
+  grid-row: 1/2; <br>
+  -ms-grid-column-align: end; <br>
+  justify-self: end; <br>
+  margin: 3% 18%;<br>
+  width: 20px; <br>
+  height: 20px; <br>
+}<br>
+<br>
+.breadNsearch__crumbs {<br>
+  display: -webkit-box; <br>
+  display: -ms-flexbox; <br>
+  display: flex; <br>
+  -webkit-box-pack: start; <br>
+  -ms-flex-pack: start; <br>
+  justify-content: flex-start; <br>
+} <br>
+.info-grid-container { <br>
+  display: -ms-grid; <br>
+  display: grid; <br>
+  -ms-grid-columns: 50% 50%; <br>
+  grid-template-columns: 50% 50%; <br>
+  -ms-grid-rows: 1fr 1fr; <br>
+  grid-template-rows: 1fr 1fr; <br>
+  padding: 4% 4% 2% 6%; <br>
+  grid-gap: 20px; <br>
+} <br>
+<br>
+.info-grid-containergriditem1 { <br>
+  background-color: #2f2f2f; <br>
+  -o-object-fit: contain; <br>
+  object-fit: contain; <br>
+  height: auto; <br>
+  -ms-grid-column: 1; <br>
+  -ms-grid-column-span: 1; <br>
+  grid-column: 1/2; <br>
+  -ms-grid-row: 1; <br>
+  -ms-grid-row-span: 2; <br>
+  grid-row: 1/3; <br>
+  -webkit-box-shadow: 0px 5px 10px -4px rgba(0, 0, 0, 0.8); <br>
+  box-shadow: 0px 5px 10px -4px rgba(0, 0, 0, 0.8); <br>
+  text-align: left; <br>
+  padding: 7% 9%; <br>
+} <br>
+<br>
+.info-grid-containergriditem1 h4 { <br>
+  font-weight: 500; <br>
+} <br>
+<br>
+.info-grid-containergriditem1 div { <br>
+  margin-top: 1%; <br>
+} <br>
+<br>
+.info-grid-containergriditem1 p { <br>
+  margin-bottom: 4%; <br>
+} <br>
+<br>
+.info-grid-containergriditem2 { <br>
+  -ms-grid-row: 1; <br>
+  -ms-grid-row-span: 2; <br>
+  grid-row: 1/3; <br>
+  -webkit-box-align: center; <br>
+  -ms-flex-align: center; <br>
+  align-items: center; <br>
+  -webkit-box-pack: center; <br>
+  -ms-flex-pack: center; <br>
+  justify-content: center; <br>
+} <br>
+<br>
+.info-grid-containergriditem3 { <br>
+  -ms-grid-row: 1; <br>
+  -ms-grid-row-span: 2; <br>
+  grid-row: 1/3;<br>
+  -webkit-box-align: center; <br>
+  -ms-flex-align: center; <br>
+  align-items: center; <br>
+  -webkit-box-pack: center; <br>
+  -ms-flex-pack: center; <br>
+  justify-content: center; <br>
+}<br>
+<br>
           </div>
        </div>
         </div>
